--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalização dos Fundos</title>
+    <style>
+        body {
+            background-image: url('imagens/wallpaper001.jpg'); background-size: 300px 300px; background-repeat: repeat-y;
+        }
+        h1{color: rgb(231, 25, 25);}
+    </style>
 </head>
 <body>
-    
+    <h1>Teste de aplicação de fundo</h1>
 </body>
 </html>
