--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -9,7 +9,7 @@
         body { height: 100vh;
             background-color: rgb(0, 0, 0);
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center ; background-repeat: no-repeat; 
+            background-position: center ; background-repeat: repeat-y; 
             background-size: cover;
         }
 
@@ -39,6 +39,28 @@
             ipsum dolor sit, amet consectetur adipisicing elit. Eum, optio iure nihil veniam consequuntur, eaque
             perspiciatis saepe nulla obcaecati totam esse quisquam voluptatibus, distinctio expedita sint quam!
             Corporis, eos ea.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ratione nihil esse! Quibusdam, suscipit? Debitis maiores, et accusamus quis mollitia vero molestiae eligendi, deleniti commodi, reprehenderit atque possimus aperiam voluptate?
+            Alias tempora recusandae culpa laborum dolor distinctio nihil non incidunt omnis molestiae soluta eos tempore ipsum, atque fuga cumque velit possimus eaque est aut totam. Repellat ratione consectetur ducimus reiciendis?
+            Quae ratione nisi est officia assumenda sint harum quis, possimus animi ad! Voluptas, error. Pariatur obcaecati dicta nesciunt magni autem tempora quidem voluptatum veniam rerum aliquam! Aliquid delectus esse non?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta saepe iusto vel id sed ad hic itaque, aliquam
+                quas sapiente beatae consequatur illo rerum dolores eos. Temporibus reiciendis omnis atque!Lorem ipsum dolor
+                sit amet consectetur, adipisicing elit. Et impedit recusandae fugiat, doloribus facilis, velit accusamus
+                provident eos eveniet voluptatum nostrum porro nulla consequuntur sit esse consectetur harum, ex illo.Lorem
+                ipsum dolor sit, amet consectetur adipisicing elit. Eum, optio iure nihil veniam consequuntur, eaque
+                perspiciatis saepe nulla obcaecati totam esse quisquam voluptatibus, distinctio expedita sint quam!
+                Corporis, eos ea.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ratione nihil esse! Quibusdam, suscipit? Debitis maiores, et accusamus quis mollitia vero molestiae eligendi, deleniti commodi, reprehenderit atque possimus aperiam voluptate?
+                Alias tempora recusandae culpa laborum dolor distinctio nihil non incidunt omnis molestiae soluta eos tempore ipsum, atque fuga cumque velit possimus eaque est aut totam. Repellat ratione consectetur ducimus reiciendis?
+                Quae ratione nisi est officia assumenda sint harum quis, possimus animi ad! Voluptas, error. Pariatur obcaecati dicta nesciunt magni autem tempora quidem voluptatum veniam rerum aliquam! Aliquid delectus esse non?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta saepe iusto vel id sed ad hic itaque, aliquam
+                    quas sapiente beatae consequatur illo rerum dolores eos. Temporibus reiciendis omnis atque!Lorem ipsum dolor
+                    sit amet consectetur, adipisicing elit. Et impedit recusandae fugiat, doloribus facilis, velit accusamus
+                    provident eos eveniet voluptatum nostrum porro nulla consequuntur sit esse consectetur harum, ex illo.Lorem
+                    ipsum dolor sit, amet consectetur adipisicing elit. Eum, optio iure nihil veniam consequuntur, eaque
+                    perspiciatis saepe nulla obcaecati totam esse quisquam voluptatibus, distinctio expedita sint quam!
+                    Corporis, eos ea.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ratione nihil esse! Quibusdam, suscipit? Debitis maiores, et accusamus quis mollitia vero molestiae eligendi, deleniti commodi, reprehenderit atque possimus aperiam voluptate?
+                    Alias tempora recusandae culpa laborum dolor distinctio nihil non incidunt omnis molestiae soluta eos tempore ipsum, atque fuga cumque velit possimus eaque est aut totam. Repellat ratione consectetur ducimus reiciendis?
+                    Quae ratione nisi est officia assumenda sint harum quis, possimus animi ad! Voluptas, error. Pariatur obcaecati dicta nesciunt magni autem tempora quidem voluptatum veniam rerum aliquam! Aliquid delectus esse non?</p>
     </main>
     
 </body>
