--- a/exercicios/desafiositecordel/index.html
+++ b/exercicios/desafiositecordel/index.html
@@ -31,7 +31,8 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
+        
         <p>
             Não é mais como era antes <br>
             "Você" só tem duas letras <br>
@@ -52,7 +53,7 @@
             Ou vai até no começo <br>
             Agora é .com <br>
             Se o saite é muito bom <br>
-            Ele vale um alto preço.
+            Ele vale um alto preço. 
         </p>
         <p>
             Pra piorar a liguagem <br>
@@ -66,7 +67,7 @@
 
 
 
-        <section class="imagem">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
