--- a/exercicios/desafiositecordel/index.html
+++ b/exercicios/desafiositecordel/index.html
@@ -35,6 +35,7 @@
 
         <p>
             Não é mais como era antes <br>
+            É tudo abreviado <br>
             "Você" só tem duas letras <br>
             O "O" e o "E" foi riscado <br>
             Para declarar o amor <br>
