--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -10,9 +10,12 @@
             font-family: 'Courier New', Courier, monospace;
 
         }
-        
-tbody tr:nth-child(2n) {background-color: lightcoral;}
-    /*efeito zebrado* neste caso de duas em duas*/
+
+        tbody tr:nth-child(2n) {
+            background-color: rgb(200, 192, 192);
+        }
+
+        /*efeito zebrado* neste caso de duas em duas*/
 
         caption {
             font-size: 1.3em;
@@ -25,7 +28,7 @@ tbody tr:nth-child(2n) {background-color: lightcoral;}
         table {
             border-collapse: collapse;
             width: 600px;
-
+            position: relative;
             margin: 10px;
         }
 
@@ -33,13 +36,19 @@ tbody tr:nth-child(2n) {background-color: lightcoral;}
         th {
             border: 1px solid black;
             padding: 5px;
-            text-align: center;
+            text-align:center;
 
         }
 
         thead {
             background-color: rgb(83, 85, 85);
             color: white;
+        }
+        /*fixando o cabeçalho th e tambem o background do cabeçalho*/
+        thead tr th {
+            position: sticky;
+            top: 0;
+            background-color: rgb(83,85,85);
         }
 
         .total {
@@ -108,7 +117,126 @@ tbody tr:nth-child(2n) {background-color: lightcoral;}
                 <td class="num">16.054.524</td>
                 <td>7,91%</td>
             </tr>
-
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.054.524</td>
+                <td>6,96%</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11.054.524</td>
+                <td>5,64%</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">10.054.524</td>
+                <td>5,36%</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num"> 9.054.524</td>
+                <td>4,46%</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num"> 8.754.524</td>
+                <td>4,33%</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num"> 8.154.524</td>
+                <td>4,10%</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num"> 7.654.524</td>
+                <td> 3,75%</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num"> 7.054.524</td>
+                <td>3,47%</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num"> 6.7054.524</td>
+                <td>3,34%</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num"> 3.974.524</td>
+                <td>1,96%</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num"> 3.941.524</td>
+                <td>1,94%</td>
+            </tr>
+            <tr>
+                <td>Espirito Santo</td>
+                <td class="num"> 3.854.524</td>
+                <td>1,89%</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num"> 3.658.524</td>
+                <td>1,80%</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Norte</td>
+                <td class="num"> 3.354.524</td>
+                <td>1,63%</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num"> 3.269.524</td>
+                <td>1,61%</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num"> 3.127.524</td>
+                <td>1,54%</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num"> 2.817.524</td>
+                <td>1,39</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso do Sul</td>
+                <td class="num"> 2.756.524</td>
+                <td>1,36%</td>
+            </tr>
+            <tr>
+                <td>Sergipe</td>
+                <td class="num"> 2.209.524</td>
+                <td>1,09%</td>
+            </tr>
+            <tr>
+                <td>Rondonia</td>
+                <td class="num"> 1.581.524</td>
+                <td>0,78%</td>
+            </tr>
+            <tr>
+                <td>Tocantins</td>
+                <td class="num"> 1.511.524</td>
+                <td>0,74%</td>
+            </tr>
+            <tr>
+                <td>Acre</td>
+                <td class="num"> 830.524</td>
+                <td>0,41%</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num"> 733.524</td>
+                <td>0,36%</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num"> 636.524</td>
+                <td>0,31%</td>
+            </tr>
         </tbody>
         <tfoot>
             <th scope="row">Total de Habitantes</th>
@@ -116,6 +244,25 @@ tbody tr:nth-child(2n) {background-color: lightcoral;}
             <td>x</td>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolores assumenda fuga aliquam saepe culpa doloribus, fugit est odit sit! Tenetur aliquid praesentium dolore blanditiis. Corporis, sint. Voluptatibus, iusto quia.
+    Eum iure quas quod officia molestias nihil quam sed cupiditate velit vel rerum est explicabo enim possimus aliquid blanditiis fugiat in, modi beatae? Iusto dignissimos fuga eaque modi itaque aspernatur?
+    Reiciendis voluptatem, cupiditate qui neque architecto praesentium quaerat temporibus minima hic, perferendis repellendus officiis alias doloremque saepe est dolorum modi sed recusandae accusamus iusto placeat provident. Iure ad vitae doloribus.
+    Voluptatem odio fuga placeat ad ipsum sapiente ducimus. Illum nemo ducimus ab rerum numquam illo nisi alias pariatur. Laudantium voluptatibus amet iusto neque, accusamus repellat sapiente sit animi dolor qui.
+    Quidem numquam dolore ullam non animi consectetur modi quia hic perferendis dignissimos voluptatem eos maiores itaque doloremque incidunt similique ipsum eum eligendi sint excepturi corrupti, nostrum laboriosam inventore. Quisquam, facilis!
+    Voluptatum, ut deserunt. Natus adipisci ipsam assumenda numquam! Unde voluptatum soluta nulla, ipsa sequi maiores alias nesciunt expedita, quod officiis id quia perspiciatis veritatis dolores. Quasi, a! Rerum, iste </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet reprehenderit, omnis sapiente, molestias corporis odio velit exercitationem molestiae dicta sed earum nesciunt aperiam sequi excepturi quam laborum minus id nisi.
+    Pariatur distinctio mollitia obcaecati similique nisi quas hic vero, neque dolorem molestiae! Veniam, vero. Quos cumque at sed, consequuntur quis repellendus veniam eos iusto similique, a omnis nesciunt voluptas delectus!
+    Assumenda totam reprehenderit voluptate iure excepturi molestiae, ab quis id consequuntur? Atque velit sit ex laborum, exercitationem, tempora quidem ut repudiandae consectetur facilis aperiam placeat obcaecati cumque, ad nam pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, facere deleniti quas praesentium exercitationem veniam, vel magnam numquam eius corporis fugit suscipit, necessitatibus nemo cupiditate harum quos quia? Consequatur, vero?
+    Iusto provident recusandae enim quibusdam architecto eveniet voluptatem non excepturi nihil, dolore ad ut nemo exercitationem minima dignissimos assumenda ea error molestiae! Necessitatibus voluptatibus iure tenetur quae amet aut doloremque!
+    Cum quam incidunt est eligendi corporis amet saepe natus dicta labore, odio exercitationem nesciunt eveniet provident ullam velit id quis ducimus eaque voluptatibus aspernatur! Perferendis pariatur labore fugiat molestias officiis.
+    Velit, consequuntur. Eos, corporis odit soluta voluptatum deleniti quidem iusto ut exercitationem repellendus at. Recusandae delectus provident porro ab excepturi optio qui aliquam tenetur, nihil numquam. Laboriosam soluta quo magnam?
+    Cum dolor nesciunt cumque obcaecati porro eveniet aperiam perferendis, officia vel autem unde deleniti aliquam fuga eos facere perspiciatis atque voluptates commodi. Consequatur ea totam maxime temporibus, eum odio debitis.
+    Officiis error hic sed quisquam suscipit, alias vel veniam corporis debitis ipsum eum repellendus maxime quas vero ipsa dignissimos voluptatibus quos reprehenderit perspiciatis voluptatem odit autem numquam necessitatibus. Amet, error.
+    Ullam obcaecati eveniet esse, ad sit repudiandae fugiat voluptate alias distinctio voluptates ducimus? Error dolore quo reprehenderit nihil, dolor, doloribus veniam culpa asperiores in fugiat porro quod eveniet sed voluptatem.
+    Molestiae cumque repellat excepturi atque ipsa dolorum voluptas, obcaecati quisquam repellendus nemo iure at magni placeat optio praesentium vel possimus aut accusantium pariatur! Nulla explicabo mollitia ipsam maiores, enim vero?
+    Totam asperiores cupiditate quasi ab maiores corporis harum incidunt pariatur suscipit. Consequuntur facilis, ullam necessitatibus, perferendis quo harum explicabo, quod provident cupiditate vero ducimus repellat reiciendis inventore quas tenetur accusamus.
+    Labore et, ut reiciendis dignissimos autem quam modi laudantium itaque nulla pariatur at possimus doloremque deleniti tenetur veniam commodi omnis blanditiis laborum illum molestias sint consequuntur expedita. Veniam, aliquam praesentium?</p>
 </body>
 
 </html>
