--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -90,7 +90,7 @@
 
 
     <table>
-        <caption>População Brasileria por Estados - 2022</caption>
+        <caption>População Brasileira por Estados - 2022</caption>
         <thead>
             <tr>
                 <th scope="col">Estado</th> <!--scope "col" mesma coluna,
