fim do modulo 3

--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -28,6 +28,12 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.3em;
+            font-weight: bolder;
+            padding: 8px;
+        }
+
         th,
         td {
             border: 1px solid black;
@@ -40,6 +46,9 @@
 <body>
 
     <table>
+
+        <caption>Tabela de Disciplinas</caption>
+
         <thead>
             <tr>
                 <th rowspan="5">Área</th>
