--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -36,7 +36,7 @@
         th {
             border: 1px solid black;
             padding: 5px;
-            text-align:center;
+            text-align: center;
 
         }
 
@@ -44,11 +44,12 @@
             background-color: rgb(83, 85, 85);
             color: white;
         }
+
         /*fixando o cabeçalho th e tambem o background do cabeçalho*/
         thead tr th {
             position: sticky;
             top: 0;
-            background-color: rgb(83,85,85);
+            background-color: rgb(25, 118, 118);
         }
 
         .total {
@@ -244,25 +245,60 @@
             <td>x</td>
         </tfoot>
     </table>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolores assumenda fuga aliquam saepe culpa doloribus, fugit est odit sit! Tenetur aliquid praesentium dolore blanditiis. Corporis, sint. Voluptatibus, iusto quia.
-    Eum iure quas quod officia molestias nihil quam sed cupiditate velit vel rerum est explicabo enim possimus aliquid blanditiis fugiat in, modi beatae? Iusto dignissimos fuga eaque modi itaque aspernatur?
-    Reiciendis voluptatem, cupiditate qui neque architecto praesentium quaerat temporibus minima hic, perferendis repellendus officiis alias doloremque saepe est dolorum modi sed recusandae accusamus iusto placeat provident. Iure ad vitae doloribus.
-    Voluptatem odio fuga placeat ad ipsum sapiente ducimus. Illum nemo ducimus ab rerum numquam illo nisi alias pariatur. Laudantium voluptatibus amet iusto neque, accusamus repellat sapiente sit animi dolor qui.
-    Quidem numquam dolore ullam non animi consectetur modi quia hic perferendis dignissimos voluptatem eos maiores itaque doloremque incidunt similique ipsum eum eligendi sint excepturi corrupti, nostrum laboriosam inventore. Quisquam, facilis!
-    Voluptatum, ut deserunt. Natus adipisci ipsam assumenda numquam! Unde voluptatum soluta nulla, ipsa sequi maiores alias nesciunt expedita, quod officiis id quia perspiciatis veritatis dolores. Quasi, a! Rerum, iste </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet reprehenderit, omnis sapiente, molestias corporis odio velit exercitationem molestiae dicta sed earum nesciunt aperiam sequi excepturi quam laborum minus id nisi.
-    Pariatur distinctio mollitia obcaecati similique nisi quas hic vero, neque dolorem molestiae! Veniam, vero. Quos cumque at sed, consequuntur quis repellendus veniam eos iusto similique, a omnis nesciunt voluptas delectus!
-    Assumenda totam reprehenderit voluptate iure excepturi molestiae, ab quis id consequuntur? Atque velit sit ex laborum, exercitationem, tempora quidem ut repudiandae consectetur facilis aperiam placeat obcaecati cumque, ad nam pariatur!</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, facere deleniti quas praesentium exercitationem veniam, vel magnam numquam eius corporis fugit suscipit, necessitatibus nemo cupiditate harum quos quia? Consequatur, vero?
-    Iusto provident recusandae enim quibusdam architecto eveniet voluptatem non excepturi nihil, dolore ad ut nemo exercitationem minima dignissimos assumenda ea error molestiae! Necessitatibus voluptatibus iure tenetur quae amet aut doloremque!
-    Cum quam incidunt est eligendi corporis amet saepe natus dicta labore, odio exercitationem nesciunt eveniet provident ullam velit id quis ducimus eaque voluptatibus aspernatur! Perferendis pariatur labore fugiat molestias officiis.
-    Velit, consequuntur. Eos, corporis odit soluta voluptatum deleniti quidem iusto ut exercitationem repellendus at. Recusandae delectus provident porro ab excepturi optio qui aliquam tenetur, nihil numquam. Laboriosam soluta quo magnam?
-    Cum dolor nesciunt cumque obcaecati porro eveniet aperiam perferendis, officia vel autem unde deleniti aliquam fuga eos facere perspiciatis atque voluptates commodi. Consequatur ea totam maxime temporibus, eum odio debitis.
-    Officiis error hic sed quisquam suscipit, alias vel veniam corporis debitis ipsum eum repellendus maxime quas vero ipsa dignissimos voluptatibus quos reprehenderit perspiciatis voluptatem odit autem numquam necessitatibus. Amet, error.
-    Ullam obcaecati eveniet esse, ad sit repudiandae fugiat voluptate alias distinctio voluptates ducimus? Error dolore quo reprehenderit nihil, dolor, doloribus veniam culpa asperiores in fugiat porro quod eveniet sed voluptatem.
-    Molestiae cumque repellat excepturi atque ipsa dolorum voluptas, obcaecati quisquam repellendus nemo iure at magni placeat optio praesentium vel possimus aut accusantium pariatur! Nulla explicabo mollitia ipsam maiores, enim vero?
-    Totam asperiores cupiditate quasi ab maiores corporis harum incidunt pariatur suscipit. Consequuntur facilis, ullam necessitatibus, perferendis quo harum explicabo, quod provident cupiditate vero ducimus repellat reiciendis inventore quas tenetur accusamus.
-    Labore et, ut reiciendis dignissimos autem quam modi laudantium itaque nulla pariatur at possimus doloremque deleniti tenetur veniam commodi omnis blanditiis laborum illum molestias sint consequuntur expedita. Veniam, aliquam praesentium?</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolores assumenda fuga aliquam saepe culpa
+        doloribus, fugit est odit sit! Tenetur aliquid praesentium dolore blanditiis. Corporis, sint. Voluptatibus,
+        iusto quia.
+        Eum iure quas quod officia molestias nihil quam sed cupiditate velit vel rerum est explicabo enim possimus
+        aliquid blanditiis fugiat in, modi beatae? Iusto dignissimos fuga eaque modi itaque aspernatur?
+        Reiciendis voluptatem, cupiditate qui neque architecto praesentium quaerat temporibus minima hic, perferendis
+        repellendus officiis alias doloremque saepe est dolorum modi sed recusandae accusamus iusto placeat provident.
+        Iure ad vitae doloribus.
+        Voluptatem odio fuga placeat ad ipsum sapiente ducimus. Illum nemo ducimus ab rerum numquam illo nisi alias
+        pariatur. Laudantium voluptatibus amet iusto neque, accusamus repellat sapiente sit animi dolor qui.
+        Quidem numquam dolore ullam non animi consectetur modi quia hic perferendis dignissimos voluptatem eos maiores
+        itaque doloremque incidunt similique ipsum eum eligendi sint excepturi corrupti, nostrum laboriosam inventore.
+        Quisquam, facilis!
+        Voluptatum, ut deserunt. Natus adipisci ipsam assumenda numquam! Unde voluptatum soluta nulla, ipsa sequi
+        maiores alias nesciunt expedita, quod officiis id quia perspiciatis veritatis dolores. Quasi, a! Rerum, iste
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet reprehenderit, omnis sapiente, molestias
+        corporis odio velit exercitationem molestiae dicta sed earum nesciunt aperiam sequi excepturi quam laborum minus
+        id nisi.
+        Pariatur distinctio mollitia obcaecati similique nisi quas hic vero, neque dolorem molestiae! Veniam, vero. Quos
+        cumque at sed, consequuntur quis repellendus veniam eos iusto similique, a omnis nesciunt voluptas delectus!
+        Assumenda totam reprehenderit voluptate iure excepturi molestiae, ab quis id consequuntur? Atque velit sit ex
+        laborum, exercitationem, tempora quidem ut repudiandae consectetur facilis aperiam placeat obcaecati cumque, ad
+        nam pariatur!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure, facere deleniti quas praesentium exercitationem
+        veniam, vel magnam numquam eius corporis fugit suscipit, necessitatibus nemo cupiditate harum quos quia?
+        Consequatur, vero?
+        Iusto provident recusandae enim quibusdam architecto eveniet voluptatem non excepturi nihil, dolore ad ut nemo
+        exercitationem minima dignissimos assumenda ea error molestiae! Necessitatibus voluptatibus iure tenetur quae
+        amet aut doloremque!
+        Cum quam incidunt est eligendi corporis amet saepe natus dicta labore, odio exercitationem nesciunt eveniet
+        provident ullam velit id quis ducimus eaque voluptatibus aspernatur! Perferendis pariatur labore fugiat
+        molestias officiis.
+        Velit, consequuntur. Eos, corporis odit soluta voluptatum deleniti quidem iusto ut exercitationem repellendus
+        at. Recusandae delectus provident porro ab excepturi optio qui aliquam tenetur, nihil numquam. Laboriosam soluta
+        quo magnam?
+        Cum dolor nesciunt cumque obcaecati porro eveniet aperiam perferendis, officia vel autem unde deleniti aliquam
+        fuga eos facere perspiciatis atque voluptates commodi. Consequatur ea totam maxime temporibus, eum odio debitis.
+        Officiis error hic sed quisquam suscipit, alias vel veniam corporis debitis ipsum eum repellendus maxime quas
+        vero ipsa dignissimos voluptatibus quos reprehenderit perspiciatis voluptatem odit autem numquam necessitatibus.
+        Amet, error.
+        Ullam obcaecati eveniet esse, ad sit repudiandae fugiat voluptate alias distinctio voluptates ducimus? Error
+        dolore quo reprehenderit nihil, dolor, doloribus veniam culpa asperiores in fugiat porro quod eveniet sed
+        voluptatem.
+        Molestiae cumque repellat excepturi atque ipsa dolorum voluptas, obcaecati quisquam repellendus nemo iure at
+        magni placeat optio praesentium vel possimus aut accusantium pariatur! Nulla explicabo mollitia ipsam maiores,
+        enim vero?
+        Totam asperiores cupiditate quasi ab maiores corporis harum incidunt pariatur suscipit. Consequuntur facilis,
+        ullam necessitatibus, perferendis quo harum explicabo, quod provident cupiditate vero ducimus repellat
+        reiciendis inventore quas tenetur accusamus.
+        Labore et, ut reiciendis dignissimos autem quam modi laudantium itaque nulla pariatur at possimus doloremque
+        deleniti tenetur veniam commodi omnis blanditiis laborum illum molestias sint consequuntur expedita. Veniam,
+        aliquam praesentium?</p>
 </body>
 
 </html>
