--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -48,7 +48,7 @@
         /*fixando o cabeçalho th e tambem o background do cabeçalho*/
         thead tr th {
             position: sticky;
-            top: 0;
+            top: -1px;
             background-color: rgb(25, 118, 118);
         }
 
