--- a/exercicios/ex024/paginas-extras/pagina001.html
+++ b/exercicios/ex024/paginas-extras/pagina001.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas 006</title>
+    <meta name="viewport" content="width=pt-br, initial-scale=1.0">
+    <title>site de teste</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif; position: relative;
@@ -46,8 +45,6 @@
         }
     </style>
 </head>
-<!-- o processo para telas pequenas , seria colocar toda Tavela dentro de uma DIV e criar uma id e configurar com overflow-x: auto; e entao o texto vai reduzindo mas a rolagem é só pra a tabela -->
-
 <body>
     <h1>Tabela em Telas Pequenas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sed atque voluptatum officia pariatur beatae modi
@@ -184,7 +181,5 @@
     </div>
 
 
-
 </body>
-
 </html>
