--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -33,8 +33,8 @@
         repellat laborum architecto rerum, suscipit veritatis. Adipisci odit deleniti incidunt sit unde nulla, a nobis!
         Dolorum odio facere similique et iste aperiam totam amet ex! Doloribus dolor reprehenderit aliquid possimus ex!
         Quos rem quam provident quibusdam quod accusamus doloremque dicta maiores deleniti iste, ea at?</p>
-   <iframe src="" id="tela" name="frame" srcdoc="<h1> ESCOLHA UMA DAS OPÇOES ACIMA </h1>"></iframe>
-    <p>infelizmente seu navegador nao e compativel</p>
+   <iframe id="tela" name="frame" srcdoc="<h1> ESCOLHA UMA DAS OPÇOES ACIMA </h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus explicabo optio veniam. Eos suscipit illo odit ut perferendis placeat labore possimus porro quos? Ipsum quam itaque harum aperiam vitae architecto.</p> <img src='imagens/bugdroid.png'>"><p>infelizmente seu navegador nao e compativel</p></iframe>
+    
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat molestiae saepe, quae quam, sint
         placeat rerum fugiat ex voluptas distinctio. Obcaecati impedit et, vero alias soluta nobis omnis nostrum!
         Fugit, eum qui. Blanditiis dolor labore tenetur, ex impedit harum culpa, molestias vel necessitatibus voluptatem
