--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -22,7 +22,7 @@
 
     </p>
     <p>
-        <label for="periodo letivo"></label>
+        <label for="imes">Periodo Letivo</label>
         <input type="month" name="mes" id="imes">
     </p>
     <p>
@@ -33,6 +33,7 @@
         <label for="ihora">Horario da Prova</label>
         <input type="time" name="hora" id="ihora">
     </p>
+    
     <p>
         <input type="submit" value="enviar">
         <input type="reset" value="limpar">
