--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -15,11 +15,11 @@
             Testando Media Queries
         </h1>
         
-        <img src="/imagens/icon-phone.png" alt="acessando via smartphone" id="phone">
-        <img src="/imagens/icon-tablet.png" alt="acessando via tablet" id="tablet">
-        <img src="/imagens/icon-print.png" alt="acessando via impressora" id="print">
-        <img src="/imagens/icon-pc.png" alt="acessando via pc" id="pc">
-        <img src="/imagens/icon-tv.png" alt="acessando via tv" id="tv">
+        <img id="phone"  src="/imagens/icon-phone.png" alt="acessando via smartphone" >
+        <img id="tablet" src="/imagens/icon-tablet.png" alt="acessando via tablet" >
+        <img id="print"  src="/imagens/icon-print.png" alt="acessando via impressora" >
+        <img id="pc"     src="/imagens/icon-pc.png" alt="acessando via pc" >
+        <img id="tv"     src="/imagens/icon-tv.png" alt="acessando via tv" >
     </main>
 
 
