--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -33,7 +33,7 @@
     <main>
         <article>
             <h2>Testando media query</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda vero vitae corrupti commodi
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda vero vitae corrupti comodidade
                 nesciunt iure et dolor cupiditate? Minus quod quaerat rerum impedit atque voluptas quibusdam fugit
                 accusamus exercitationem. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores esse
                 repellat incidunt labore ex pariatur at omnis. Molestias aperiam necessitatibus dicta, laudantium
